Fix a couple of bugs in the BibtexUploadForm, and update tests for the newest format in which results are output by the form.

--- a/src/research_assistant/tests/data/test_data.bib
+++ b/src/research_assistant/tests/data/test_data.bib
@@ -9,7 +9,7 @@
 	author = {{Susan Hennessey} and {Nicholas Weaver}},
 	month = jul,
 	year = {2016},
-	keywords = {2010s, Child Exploitation, FBI, Going Dark, Law Enforcement, Lawfare}
+	keywords = {2010s, Child Exploitation}
 }
 
 @misc{anonymous_flawed_1996,
